[gd_scene load_steps=2 format=3 uid="uid://b6crpbxmux8ne"]

[ext_resource type="Script" uid="uid://c6em75cwm8xw1" path="res://Scripts/UI/settings_menu.gd" id="1_kfh4b"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_kfh4b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = 140.0
offset_right = 241.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Master" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Master"]
layout_mode = 0
offset_left = -122.5
offset_top = -10.5
offset_right = -4.5
offset_bottom = 64.5
text = "Master Volume
Music   Volume
Sound    Effects"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="drag_ended" from="MarginContainer/VBoxContainer/Master" to="." method="_on_master_drag_ended"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/Music" to="." method="_on_music_drag_ended"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_drag_ended"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
